project(learning-c)

add_executable(learning-c1 lesson1.c)
add_executable(learning-c2 lesson2.c)
add_executable(learning-c3 lesson3.c)
add_executable(learning-c4 lesson4.c)
add_executable(learning-c5 lesson5.c)
add_executable(learning-c6 lesson6.c)
add_executable(learning-c7 lesson7.c)
add_executable(learning-c8 lesson8.c)
add_executable(learning-c9 lesson9.c)
add_executable(learning-c10 lesson10.c)
add_executable(learning-c11 lesson11.c)
