project(learning-c)

add_executable(learning-c30 lesson30.c)
add_executable(learning-c31 lesson31.c)
add_executable(learning-c32 lesson32.c)
add_executable(learning-c33 lesson33.c)
add_executable(learning-c34 lesson34.c)
add_executable(learning-c35 lesson35.c)
add_executable(learning-c36 lesson36.c)
add_executable(learning-c37 lesson37.c)
add_executable(learning-c38 lesson38.c)
add_executable(learning-c39 lesson39.c)
add_executable(learning-c40 lesson40.c)
add_executable(learning-c41 lesson41.c)
add_executable(learning-c42 lesson42.c)
add_executable(learning-c43 lesson43.c)
add_executable(learning-c44 lesson44.c)
add_executable(learning-c45 lesson45.c)
add_executable(learning-c46 lesson46.c)
add_executable(learning-c1 lesson1.c lesson20.c lesson29.c)
add_executable(learning-c2 lesson2.c)
add_executable(learning-c3 lesson3.c)
add_executable(learning-c4 lesson4.c)
add_executable(learning-c5 lesson5.c)
add_executable(learning-c6 lesson6.c)
add_executable(learning-c7 lesson7.c)
add_executable(learning-c8 lesson8.c)
add_executable(learning-c9 lesson9.c)
add_executable(learning-c10 lesson10.c)
add_executable(learning-c11 lesson11.c)
add_executable(learning-c12 lesson12.c)
add_executable(learning-c13 lesson13.c)
add_executable(learning-c14 lesson14.c)
add_executable(learning-c15 lesson15.c)
add_executable(learning-c16 lesson16.c)
add_executable(learning-c17 lesson17.c)
add_executable(learning-c18 lesson18.c)
add_executable(learning-c19 lesson19.c)
add_executable(learning-c20 lesson20.c)
add_executable(learning-c21 lesson21.c)
add_executable(learning-c22 lesson22.c)
add_executable(learning-c23 lesson23.c)
add_executable(learning-c24 lesson24.c)
add_executable(learning-c25 lesson25.c)
add_executable(learning-c26 lesson26.c)
add_executable(learning-c27 lesson27.c)
add_executable(learning-c28 lesson28.c)
add_executable(learning-c29 lesson29.c)
